web/themes/custom/usagov/sass/_uswds-theme-custom-styles.scss
/* ... */
.usa-nav__primary>.usa-nav__primary-item>a,
.usa-nav__primary>.usa-nav__primary-item>a:hover {
  @media (min-width: 64em) {
    padding: 0.8rem;
    color: color("blue-warm-70v");
  }
}

.usa-nav__primary>.usa-nav___primary-item-smaller-padding>a,
.usa-nav__primary>.usa-nav___primary-item-smaller-padding>a:hover {
  padding: 0.7rem;
}

// adds vertical spacing for top-nav on desktop
@media (min-width: 64em) {
  .usa-nav__primary>.usa-nav__primary-item>.usa-nav__link {
    line-height: 1.1;
  }
}

// adds visible focus around entire search box
[type="search"] {
  z-index: 1;
}

// adds visible focus around entire search button and removes padding
.usa-button:not([disabled]):focus {
  outline-offset: 0;
  z-index: 1;
}



a,
.usa-alert__text a,
.usa-footer__return-to-top a,
.usa-link,
.usa-skipnav {
  color: color("blue-warm-70v");
}

.usa-prose a:visited {
  color: color($theme-link-visited-color);
}

.usagov-hero a:visited {
  color: color("cyan-10");
}

.usagov-hero a,
.usagov-hero__callout ul a {
  color: color("cyan-30v");
}

.usagov-hero__callout ul a:visited {
  color: color("cyan-10");
}

.usa-button {
  width: 100%;
  line-height: 1.5;
  display: flex;
  justify-content: left;

  @media (min-width: 30em) {
    width: auto;
  }
}

.usagov-button--outline-black {
  box-shadow: $theme-button-stroke-width color("black");
  color: color("black");

  &:hover {
    box-shadow: $theme-button-stroke-width color("black");
    color: color("black");
  }
}

.usa-checkbox__input:checked+.usa-checkbox__label::before,
.usa-radio__input:checked+.usa-radio__label::before {
  background-color: color("black");
  box-shadow: 0 0 0 units($theme-input-select-border-width) color("black"),
    inset 0 0 0 units($theme-input-select-border-width) color("white");
}

.usa-checkbox__input--tile:checked+.usa-checkbox__label,
.usa-radio__input--tile:checked+.usa-radio__label {
  // background-color: #ccecf2;
  border-color: var($radio-button, border-color);
}

.usa-checkbox__input--tile+.usa-checkbox__label,
.usa-radio__input--tile+.usa-radio__label {
  border-color: black;
  background: white;
}

.usa-breadcrumb__link,
.usa-breadcrumb__link:hover {
  line-height: 1.5;
  text-decoration: underline;
  color: var($text-blue);
}

.usa-breadcrumb__link:visited {
  text-decoration: underline;
  color: var($dark-gray);
}

a {
  color: var($text-blue);
}

#block-betabanner .usa-alert--info,
#block-betaspanishbanner .usa-alert--info {
  // These styles are needed to position the alert icon
  &::before {
    display: none;
  }

  .usa-alert__body {
    position: relative;

    &::before {
      background: url("../assets/img/usa-icons/info.svg") no-repeat center/2rem 2rem;
      width: 2rem;
      content: "";
      display: block;
      height: 2.4rem;
      position: absolute;
      left: 1.3rem;
      top: -0.6rem;
      background-color: var($off-black);
      mask: url("../assets/img/usa-icons/info.svg") no-repeat center/2rem 2rem;
      background-size: 1.5rem;

      // height: 2.5rem;
      // width: 1.5rem;
      mask-size: 1.5rem;

      @media (max-width: 1022px) {
        left: 0.4rem;
      }
    }
  }
}

#block-emergencyheaderbanner .usa-alert--error {
  // These styles are needed to position the alert icon
  &::before {
    display: none;
  }

  .usa-alert__body {
    position: relative;

    &::before {
      background: url("../assets/img/usa-icons/error.svg") no-repeat center/2rem 2rem;
      width: 2rem;
      content: "";
      display: block;
      height: 3.5rem;
      position: absolute;
      left: 1.6rem;
      top: -0.6rem;
      background-color: var($off-black);
      mask: url("../assets/img/usa-icons/error.svg") no-repeat center/2rem 2rem;
      background-size: 1.5rem;

      // height: 2.5rem;
      // width: 1.5rem;
      mask-size: 1.5rem;

      @media (max-width: 1022px) {
        left: 0.4rem;
      }
    }
  }
}

#block-usagov-content .font-serif-lg {
  // This style is needed to set the font size of intro text
  font-size: 1.5rem;
}

.desktop\:grid-col-fill .content-wrapper {
  // On Navigation Cards pages, display the content in reverse order. So the Nav banner is displayed above the Intro Text.
  display: flex;
  flex-direction: column;
}

// This style is needed to extend the width of nav page intro text
.desktop\:grid-col-fill .usa-prose>p.usa-intro {
  max-width: 81ex;
  margin-left: 1.2ex;
  margin-right: 1.2ex;
}

@media (max-width: 30em) {
  .usa-alert,
  .usa-prose,
  .usa-table,
  .usa-form,
  .usa-radio__label,
  .usa-footer,
  .usa-nav .usa-accordion,
  .usa-accordian__heading,
  .text-primary-lighter,
  .usa-hero,
  .usa-identifier,
  .usa-label {
    font-size: 1.1rem;
  }
}

.desktop\:grid-col-8 .body-copy {
  // Add margin only on content pages
  margin-top: 2.5rem;
}

.usa-skipnav:active,
.usa-skipnav:hover {
  color: var($text-blue);
}

.usa-skipnav:visited {
  color: var($dark-gray);
}

#back-to-top {
  position: fixed;

  // float:right;
  height: 50px;
  width: 90px;
  right: -100px;
  bottom: 80px;
  background: var($off-white);
  transition: right 0.5s;
  background-image: url("/themes/custom/usagov/images/Icon_Back_to_Top_Blue.png");
  background-size: 45px;
  background-position: 2px;
  background-repeat: no-repeat;
  padding: 0 15px 0 50px;
  border-radius: 25px 0 0 25px;
  line-height: 50px;
  display: inline-block;
  text-align: center;
  z-index: 1;

  &.stuck {
    right: 0;
  }
}

// Last Updated, Share and Survey
.additional_body_info {
  padding-top: 75px;
}

// Share This Page
div #sm-share {
  display: flex;
  padding-bottom: 22px;
  background-color: transparent;
  font-size: var($smaller-text-font-size);
}

#share-page {
  margin-top: auto;
  margin-bottom: auto;
}

div #sm-share a {
  text-decoration: none;
}

.share-icons {
  margin-left: 10px;
  height: 44px;
  line-height: 44px;
  display: flex;
}

.share-icon {
  margin: 6px;
  width: 32px;
  height: 32px;
  color: #1b1b1b;
  display: block;
}
/* ... */

